# ScopeGateRoomKey

./: .gitignore  LICENSE  Makefile  README.md  index.html  public-proof.schema.json  pyproject.toml  receipt.schema.json
.github/workflows/: ci.yml
docs/: AGENTS.md  CLAIMS_BOUNDARY.md  COLD_JUDGE_DRILL.md  EVIDENCE.md  EVIDENCE_CONTRACT.md  FIRST_MINUTE_SCRIPT.md  LABLAB_SUBMISSION_PACKET.md  LABLAB_VIDEO_SCRIPT.md  PUBLIC_SUBMIT_SEAL.md  RULE_FIT.md  SUBMISSION_COPY.md
proof/: ATTACK_MATRIX.json  ROOMKEY_PROOF_PACK.md  TEXT_INJECTION_MUTATION_RECEIPT.md  USE_CASE_VENDOR_WIRE_APPROVAL.md  download-manifest.json
receipts/: submit-check-output-20260618T233949Z.txt
samples/: hiring_packet_sensitive.json  vendor_wire_sensitive.json
scripts/: browser_verifier_contract_check.py  build_cli_transcript.py  integrity_check.py  judge_proof.py  receipt_timeline.py  secret_scan.py  site_check.py  submit_check.py
site/: cli-transcript.txt  evidence.json  index.html  verifier.js
site/receipts/: live-band-demo-20260618T185330Z-seal-post.json  live-band-demo-20260618T185330Z.json
src/roomkey/: __init__.py  cli.py  context_store.py  demo_scenarios.py  live_demo.py  models.py  policy.py  receipt.py  (+2 more)
tests/: conftest.py  test_band_event_contract.py  test_cli_band_demo.py  test_context_store.py  test_demo_scenario.py  test_import.py  test_live_band_demo.py  test_live_client.py  test_live_client_credentials.py  test_policy_gate.py  test_readme_claims.py  test_receipt.py  test_redteam_hardening.py  test_review_gate.py  test_submission_package.py  test_transcript_secret_scan.py
(+4 files in other folders)
